# os_competition_TSJ

./: .gitignore  README.md
agent-mem/: README.md  pyproject.toml
agent-mem/benchmarks/: runner.py
agent-mem/configs/: baseline.yaml  f1-bench-baseline.yaml  f1-bench-c8.yaml  f1-int8.yaml  f2-compress.yaml  f3-lazyload.yaml  f4-lmcache.yaml  f5-evict.yaml  f6-checkpoint.yaml  f7-branch-indep.yaml  f7-branch-share.yaml  f8-multi-hw.yaml  kv_offload.yaml  optimized.yaml  prefix_cache.yaml
agent-mem/docker/: Dockerfile  compose.yml
agent-mem/scripts/: run_mvp_benchmark.py  run_tot_game24.py
agent-mem/src/agent_mem/: __init__.py  cli.py  config.py  metrics.py  repro.py
agent-mem/src/agent_mem/agent/: __init__.py  react.py  tau_bench_agent.py  tools.py
agent-mem/src/agent_mem/bench/: __init__.py  compare.py  mem_sampler.py  run_dir.py  runner.py  stats.py  ttft.py  vllm_metrics.py
agent-mem/src/agent_mem/demo/: __init__.py  __main__.py  chat_app.py  monitor.py
agent-mem/src/agent_mem/kv/: __init__.py  c8.py  connector.py  lmcache.py  lmcache_check.py  lmcache_local.yaml
agent-mem/src/agent_mem/middleware/: __init__.py  _compress_worker.py  base.py  (+2 more)
agent-mem/tests/: test_cli.py  test_compare.py  test_config.py  test_demo_monitor.py  test_kv.py  test_mem_sampler.py  test_metrics.py  test_middleware.py  test_qwen_agent_runner.py  test_react.py  test_run_dir.py  test_runner_dryrun.py  test_scheduler.py  test_smoke.py  test_stats.py  test_stub_server.py  test_tau_bench_adapter.py  test_tau_bench_agent.py  test_ttft.py  test_vllm_metrics.py  test_vllm_server.py
(+51 files in other folders)
