[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-mem"
version = "0.0.1"
description = "面向智能体推理的内存管理优化系统（赛题14）"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "os_competition_TSJ" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
  "mkdocs",
  "mkdocs-material",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_mem"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
